<resources>
    <string name="app_name" translatable="false">kokofarm_user_app</string>

    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>

    <!-- Bottom Navigation View Menu Item -->
    <string name="nav_home">홈</string>
    <string name="nav_feed">급이/급수</string>
    <string name="nav_scale">IoT저울</string>
    <string name="nav_env">외기환경</string>
    <string name="nav_dong">동별현황</string>

    <string name="nav_breed">사육일지</string>
    <string name="nav_record">출하내역</string>
    <string name="nav_breed_info">사육정보</string>

    <string name="notice_1">입추 수는 최초 입추 기준(덤 포함)</string>
    <string name="notice_2">폐사, 도태, 솎기 수는 해당 일자에 발생된 것만 기록</string>
    <string name="farm_header">전체 현황</string>
    <string name="fcr_header">사료요구율(FCR)</string>
    <string name="fcr_16days">※ 16일령 이후 계산</string>
    <string name="feed_header">급이 및 급수</string>
    <string name="dong_header">동별 현황</string>
    <string name="avg_weight">평균중량</string>
    <string name="min_weight">최소</string>
    <string name="max_weight">최대</string>
    <string name="all_in_count">총 입추</string>
    <string name="live_count">생존 수</string>
    <string name="live_ratio">생존율</string>
    <string name="extra_count">덤 입추</string>
    <string name="death_count">폐사 수</string>
    <string name="cull_count">도태 수</string>
    <string name="out_count">솎기 수</string>
    <string name="per_feed">수 당 급이량</string>
    <string name="per_water">수 당 급수량</string>
    <string name="remain_feed">사료잔량</string>
    <string name="per_hour_water">시간당 급수량</string>
    <string name="all_txt">전체</string>
    <string name="today_txt">오늘</string>
    <string name="yesterday_txt">어제</string>
    <string name="dong_avg_weight">동별 평균중량 비교</string>
    <string name="dong_feed">동별 급이량 비교</string>
    <string name="dong_water">동별 급수량 비교</string>

    <string name="today_death_count">오늘 폐사 수</string>
    <string name="today_cull_count">오늘 도태 수</string>
    <string name="today_out_count">오늘 솎기 수</string>
    <string name="today_increase_weight">오늘 증체중량</string>
    <string name="weight_gaussian">중량별 정규분포</string>
    <string name="after_15days">15일령 이후 표시</string>
    <string name="days_env">일령별 환경센서</string>
    <string name="days_avg_weight">일령별 평균중량</string>
    <string name="days_feed">일령별 급이량 변화</string>
    <string name="days_water">일령별 급수량 변화</string>

    <string name="release_history">지난 출하내역</string>

    <string name="avg_temp_txt">평균 온도</string>
    <string name="avg_humi_txt">평균 습도</string>
    <string name="avg_co2_txt">평균 CO2</string>
    <string name="avg_nh3_txt">평균 NH3</string>

    <string name="set_theme">다크모드</string>
    <string name="set_alarm">알림</string>
    <string name="set_notice">공지사항</string>

    <string name="number_txt">번호</string>
    <string name="dong_txt">동</string>
    <string name="in_date_txt">입추일</string>
    <string name="out_date_txt">출하일</string>

    <string name="login_txt">로그인</string>

    <string name="today_water_change">오늘 급이량 변화</string>
    <string name="daily_water_change">일령별 급이량 변화</string>
    <string name="today_feed_change">오늘 급수량 변화</string>
    <string name="daily_feed_change">일령별 급수량 변화</string>
    <string name="avg_weight_change">평균중량 변화</string>
    <string name="avg_weight_distribution">중량별 정규분포</string>
    <string name="today_weight_increase">오늘 증체중량</string>
    <string name="env_sensor_change">환경센서 변화</string>
    <string name="day_txt">일령</string>
    <string name="network_txt">네트워크</string>
    <string name="out_day_txt">출하일령</string>
    <string name="standard_fcr">표준 FCR</string>
    <string name="fcr_weight">FCR 기반 평균중량</string>

    <string name="weight_txt">중량</string>
    <string name="temp_txt">온도</string>
    <string name="humi_txt">습도</string>
    <string name="co2_txt">이산화탄소</string>
    <string name="nh3_txt">암모니아</string>
    <string name="h2s_txt">황화수소</string>
    <string name="pm_10_txt">미세먼지</string>
    <string name="pm_25_txt">초미세먼지</string>
    <string name="solar_txt">일사량</string>
    <string name="lux_txt">조도</string>
    <string name="wind_speed_txt">풍속</string>
    <string name="wind_direction_txt">풍향</string>

    <string name="weight_unit">중량 (g)</string>
    <string name="temp_unit">온도 (°C)</string>
    <string name="humi_unit">습도 (%)</string>
    <string name="co2_unit">이산화탄소 (ppm)</string>
    <string name="nh3_unit">암모니아 (ppm)</string>
    <string name="h2s_unit">황화수소 (ppm)</string>
    <string name="pm_10_unit">미세먼지 (μg/m3)</string>
    <string name="pm_25_unit">초미세먼지 (μg/m3)</string>
    <string name="solar_unit">일사량 (W/㎡)</string>
    <string name="lux_unit">조도 (lux)</string>
    <string name="wind_speed_unit">풍속 (m/s)</string>
    <string name="wind_direction_unit">풍향</string>
    <string name="prev_txt">이전</string>
    <string name="next_txt">다음</string>
    <string name="farm_status">농장현황</string>
    <string name="detail_info">세부정보</string>
    <string name="setting_txt">설정</string>
    <string name="logout_txt">로그아웃</string>
    <string name="cnt_txt">수</string>
    <string name="sd_block">동별 표준편차</string>
    <string name="total_farm">총 농장</string>
    <string name="enter_farm">입추 농장</string>
    <string name="enter_dong">입추 동 수</string>
    <string name="released_txt">출하상태</string>
    <string name="dong_txt_empty">동</string>
    <string name="sd_txt">표준편차</string>
    <string name="mean_weight">예측 평체</string>
    <string name="avg_for_sensor">저울 센서별 평균</string>
    <string name="scale_num">번 저울</string>
    <string name="ext_change_by_days">일령별 외기환경 변화</string>
    <string name="release_count">출하 횟수</string>
    <string name="avg_weight_5">5회차 평균중량</string>
    <string name="avg_day_5">5회사 평균일령</string>
    <string name="ext_sensor_txt">외기환경</string>
    <string name="breed_record_input">사육일지 입력</string>
    <string name="base_date">기준일자</string>
    <string name="breed_type">축종</string>
    <string name="feed_input_before_enter">입추 전 사료 투입량(Kg)</string>
    <string name="enter_count">입추 수</string>
    <string name="breed_input_info_1">※ 입추, 덤 수는 최초 입추 기준</string>
    <string name="breed_input_info_2">※ 폐사, 도태, 솎기 수는 해당일자 것만 기록</string>
    <string name="cancel_txt">취소</string>
    <string name="save_txt">저장</string>
    <string name="today_feed">일일 급이량</string>
    <string name="today_water">일일 급수량</string>
    <string name="feed">급이량</string>
    <string name="water">급수량</string>
    <string name="recommended_weight">권고중량</string>
    <string name="count">수</string>
    <string name="east">동</string>
    <string name="west">서</string>
    <string name="south">남</string>
    <string name="north">북</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="northeast">북동</string>
    <string name="southeast">남동</string>
    <string name="southwest">남서</string>
    <string name="northwest">북서</string>
    <string name="good">좋음</string>
    <string name="moderate">보통</string>
    <string name="unhealthy">나쁨</string>
    <string name="very_unhealthy">매우나쁨</string>
    <string name="unhealthy">나쁨</string>

</resources>