<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:ignore="MissingDefaultResource">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/pixel_10"
        android:layout_marginHorizontal="@dimen/pixel_16"
        app:cardElevation="@dimen/overlay_04"
        app:cardCornerRadius="@dimen/pixel_10"
        app:contentPadding="@dimen/pixel_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- textView 수직 정렬을 위한 layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:includeFontPadding="false"
                        android:text="TextView"
                        style="@style/Text.md_medium_style"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/pixel_10"
                        android:includeFontPadding="false"
                        android:text="@string/weight_txt"
                        style="@style/Text.md_medium_style"/>

                    <TextView
                        android:layout_width="@dimen/pixel_10"
                        android:layout_height="wrap_content"
                        android:text=":"
                        style="@style/Text.md_medium_style"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="318.0"
                        style="@style/Text.md_regular_style"
                        android:textColor="@color/secondaryColor"/>

                </LinearLayout>

                <View
                    style="@style/solid_line_horizontal"/>

                <LinearLayout
                    android:id="@+id/scale_lv_visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="@dimen/pixel_72"
                            android:layout_height="wrap_content"
                            android:text="@string/temp_txt"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="@dimen/pixel_10"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>


                        <TextView
                            android:id="@+id/text_view_cont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="29.9"
                            android:textSize="@dimen/pixel_16"
                            android:textColor="@color/secondaryColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="@dimen/pixel_72"
                            android:layout_height="wrap_content"
                            android:text="@string/humi_txt"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="@dimen/pixel_10"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="58.4"
                            android:textSize="@dimen/pixel_16"
                            android:textColor="@color/secondaryColor"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="@dimen/pixel_72"
                            android:layout_height="wrap_content"
                            android:text="@string/co2_txt"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="@dimen/pixel_10"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="1801.0"
                            android:textSize="@dimen/pixel_16"
                            android:textColor="@color/secondaryColor" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="@dimen/pixel_72"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/nh3_txt"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="@dimen/pixel_10"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textSize="@dimen/pixel_13"
                            style="@style/Text.md_regular_style"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="0.0"
                            android:textSize="@dimen/pixel_16"
                            android:textColor="@color/secondaryColor" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>